--- a/example/index.html
+++ b/example/index.html
@@ -12,6 +12,19 @@
         width: 500px;
         text-align: center;
       }
+      .list {
+        list-style: none;
+        padding: 0;
+      }
+      .list li {
+        display: inline-block;
+        margin: 10px;
+        width: 30px;
+        height: 30px;
+        border-radius: 3px;
+        border: 2px solid #ccc;
+        line-height: 30px;
+      }
       .container {
         padding: 50px;
       }
@@ -24,6 +37,9 @@
         color: #9f0fa0;
         font-size: 16px;
         padding: 8px;
+      }
+      button[disabled] {
+        opacity: 0.4;
       }
       .v-loading {
         text-align: center;
@@ -53,22 +69,48 @@
   <body>
     <div id="app">
       <div class="container">
-        <v-loading loader='fetching data' message='Loading...'>
+        <v-loading message='Something loading! Lovely...'>
           <template slot='spinner'>
             <v-loading-heart width='1em' height='1em' />
           </template>
           This will be shown after load.
         </v-loading>
       </div>
-      <button @click='startLoading' :disable='$isLoading("fetching data")'>
-        <v-loading message='Loading...'>
+      <button @click='$startLoading("writing code")' :disable='$isLoading("writing code")'>
+        <v-loading loader='writing code' message='Writing Code...'>
           <template slot='spinner'>
             <v-loading-spinner width="1em" height="1em" />
           </template>
-          Load Data
+          Write Code
         </v-loading>
       </button>
-      <button @click='endLoading'>End</button>
+      <button @click='endLoading' :disabled='!$isLoading("writing code")'>
+        <span v-if='$isLoading("writing code")'>Stop Coding</span>
+        <span v-else>Coding Stopped</span>
+      </button>
+      <br>
+      <button @click='$startLoading("c")' :disabled='$isLoading("c")'>
+        Start <b>"c"</b> Loader
+      </button>
+      <button @click='$endLoading("c")' :disabled='!$isLoading("c")'>
+        Stop <b>"c"</b> Loader
+      </button>
+      <p>
+        Toggle on any letter to load/unload together.
+      </p>
+      <ul class="list">
+        <li v-for='loader in loaders' @click='toggleLoader(loader)'>
+          <v-loading :loader='loader' message=''>
+            <template slot='spinner' v-if='loader == "c"'>
+              <v-loading-heart width="1em" height="1em" />
+            </template>
+            <template slot='spinner' v-else>
+              <v-loading-spinner width="1em" height="1em" />
+            </template>
+            {{ loader }}
+          </v-loading>
+        </li>
+      </ul>
     </div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
